tests/baselines/reference/sourceMapWithMultipleFilesWithCopyright.errors.txt
error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
b.ts(6,1): error TS18056: Declaration file contains synthesized file reference directives: '"a.d.ts"'


!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
==== b.ts (1 errors) ====
    /*--------------------------------------------------------------------------
    Copyright 
    ---------------------------------------------------------------------------*/
    
    ///<reference path="a.ts"/>
    var y = x;
    ~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"a.d.ts"'
    
==== a.ts (0 errors) ====
    /*--------------------------------------------------------------------------
    Copyright 
    ---------------------------------------------------------------------------*/
    
    var x = {
        a: 10,
        b: 20
    };
    